--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,15 @@ group 'fr.oyashirox'
 version '1.0.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = "fr.oyashirox.MainKt"
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
 
 sourceCompatibility = 1.8
 
@@ -26,6 +35,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
